# unifolm-vla

./: .gitignore  README.md  README_cn.md  pyproject.toml
deployment/model_server/: run_real_eval_server.py
experiments/LIBERO/: eval_libero.py  libero_utils.py  unifolm_vla_inference.py
experiments/logs/: EVAL-libero_10-2026_01_27-22_30_54.txt  EVAL-libero_goal-2026_01_27-15_15_36.txt  EVAL-libero_object-2026_01_27-16_08_10.txt  EVAL-libero_spatial-2026_01_27-21_16_41.txt
prepare_data/: convert_lerobot_to_hdf5.py
prepare_data/hdf5_to_rlds/rlds_dataset/: rlds_dataset.py
prepare_data/lerobot_to_rlds/: README.md
scripts/eval_scripts/: run_eval_libero.sh  run_real_eval_server.sh
scripts/run_scripts/: run_libero_train.sh  run_unifolm_vla_train.sh
src/unifolm_vla/config/deepseeds/: deepspeed_zero2.yaml  ds_config.yaml
src/unifolm_vla/config/training/: unifolm_vla_train.yaml
src/unifolm_vla/model/: tools.py
src/unifolm_vla/model/framework/: __init__.py  base_framework.py  share_tools.py  unifolm_vla.py
src/unifolm_vla/model/modules/action_model/: DiT_ActionHeader.py
src/unifolm_vla/model/modules/action_model/flow_matching_modules/: action_encoder.py  cross_attention_dit.py
src/unifolm_vla/model/modules/vlm/: QWen2_5.py  __init__.py
src/unifolm_vla/model/utils/: pooling_utils.py
src/unifolm_vla/rlds_dataloader/: action_tokenizer.py  constants.py
src/unifolm_vla/rlds_dataloader/datasets/: __init__.py  datasets.py
src/unifolm_vla/rlds_dataloader/datasets/rlds/: dataset.py  traj_transforms.py
src/unifolm_vla/rlds_dataloader/datasets/rlds/oxe/: configs.py  materialize.py  mixtures.py  transforms.py
src/unifolm_vla/rlds_dataloader/datasets/rlds/utils/: data_utils.py  goal_relabeling.py  task_augmentation.py
src/unifolm_vla/training/: train_unifolm_vla.py
src/unifolm_vla/training/trainer_utils/: metrics.py  trainer_tools.py
